--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,7 @@
     <script src="common/mdToast/mdToast.service.js"></script>
     <script src="common/service/commonAuth/commonAuth.js"></script>
     <script src="common/service/commonApi/commonApi.js"></script>
+    <script src="common/service/commonFilter/commonFilter.js"></script>
     <script src="common/service/commonMethod/commonMethod.service.js"></script>
 
     <script src="modules/login/login.service.js"></script>
