--- a/app/modules/projectManage/projectEdit/basicData/basicData.html
+++ b/app/modules/projectManage/projectEdit/basicData/basicData.html
@@ -4,7 +4,7 @@
             <md-button class="md-icon-button edit--project--manage--head--btn" ng-click="vm.cancel()">
                 <a ui-sref="infoArchives.projectManage" class="fa fa-angle-left"></a>
             </md-button>
-            <a  ui-sref="infoArchives.projectManage" class="project--manage--head" translate="MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT">项目管理</a>
+            <a  ui-sref="infoArchives.projectManage" class="project--manage--head" translate="MODULES_PROJECTMANAGE_SYSTEM_ACCESS">系统接入</a>
             <span class="fa fa-angle-right"></span>
             <span class="current--column">{{vm.entity.projectName}}</span>
             <span> | </span>
