--- a/app/modules/projectManage/projectManage.html
+++ b/app/modules/projectManage/projectManage.html
@@ -2,13 +2,13 @@
     <md-content class="new--project--wrapper">
         <md-list-item class="md-2-line new--project--btn--wrap" >
             <div class="md-list-item-text">
-                <h3 class="title" translate="MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT">项目管理</h3>
+                <h3 class="title" translate="MODULES_PROJECTMANAGE_SYSTEM_ACCESS">系统接入</h3>
                 <p class="prompt-content" translate="MODULES_PROJECTMANAGE_PROJECT_MANAGEMENT_PROMPT">建立项目针对每个归档系统建立归档策略和业务模板</p>
             </div>
             <div class="new--project--btn--box">
                 <button ng-click="vm.newProject($event)" class="red--btn new--project--btn">
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span translate="PROJECT_MANAGE_NEW_PROJECT">新建项目</span>
+                    <span translate="MODULES_PROJECTMANAGE_SYSTEM_ACCESS">系统接入</span>
                 </button>
             </div>
             <!--<md-divider ng-if="!$last"></md-divider>-->
